--- a/index.html
+++ b/index.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+  <meta charset="UTF-8">
+  <title>Virtual Blue T-Shirt</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas, video { position: absolute; top: 0; left: 0; }
+  </style>
 </head>
 <body>
-    Yello
+  <video id="video" autoplay muted playsinline width="640" height="480" style="display:none;"></video>
+  <canvas id="canvas" width="640" height="480"></canvas>
+
+  <!-- TensorFlow.js -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
+
+  <!-- BodyPix -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0.5"></script>
+
+  <script>
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+
+    async function setupCamera() {
+      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+      video.srcObject = stream;
+      return new Promise(resolve => {
+        video.onloadedmetadata = () => resolve(video);
+      });
+    }
+
+    async function main() {
+      await tf.setBackend('webgl');
+      await tf.ready();
+      await setupCamera();
+      video.play();
+
+      const net = await bodyPix.load({
+        architecture: 'MobileNetV1',
+        outputStride: 16,
+        multiplier: 0.75
+      });
+
+      async function renderFrame() {
+        const segmentation = await net.segmentPersonParts(video, {
+          internalResolution: 'medium',
+          segmentationThreshold: 0.7
+        });
+
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const { data } = imageData;
+
+        for (let i = 0; i < segmentation.data.length; i++) {
+          if (segmentation.data[i] === 11 || segmentation.data[i] === 12) {
+            const j = i * 4;
+            data[j] = 0;       // R
+            data[j + 1] = 0;   // G
+            data[j + 2] = 255; // B
+            data[j + 3] = 180; // alpha
+          }
+        }
+
+        ctx.putImageData(imageData, 0, 0);
+        requestAnimationFrame(renderFrame);
+      }
+
+      renderFrame();
+    }
+
+    main();
+  </script>
 </body>
 </html>
