--- a/index.html
+++ b/index.html
@@ -83,21 +83,26 @@
       background-color: #e6b800;
     }
 
-    #mobile-message {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.8);
-      color: #ffcc00;
-      padding: 20px;
-      font-size: 18px;
-      font-family: monospace;
-      text-align: center;
-      z-index: 100;
-      border-radius: 10px;
-    }
+#mobile-message {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.95); /* Dark overlay to hide background */
+  color: #ffcc00;
+  padding: 20px;
+  font-size: 18px;
+  font-family: monospace;
+  text-align: center;
+  z-index: 9999; /* Highest z-index to sit above everything */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.6;
+  pointer-events: auto;
+}
 
 
 /* Flicker animation */
